# researcher-agent

./: .env.example  .gitignore  README.md  ask.cmd  pyproject.toml  requirements-lock.txt
.github/: dependabot.yml
.github/workflows/: pages.yml
data/: researcher.sqlite
researcher/: agent.py  cli.py  mcp_config.py  render.py  sources.py  store.py
researcher/prompts/: system_prompt_de.md
researcher/static/: style.css
researcher/templates/: base.html  index.html  topic.html
